[package]
name = "wattage-lnd"
version = "0.1.0"
authors = ["tim <tim@timwhite.ninja>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = { version = "0.8", default-features = false, features = ["openssl", "protobuf-codec"] }

[build-dependencies]
protoc-grpcio = "3.0.0"
curl = "0.4.37"
